--- a/app/src/main/res/drawable/shape_third.xml
+++ b/app/src/main/res/drawable/shape_third.xml
@@ -2,7 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/orange"/>
+    <solid android:color="@color/redsoft"/>
     <corners android:radius="5dp"/>
-
 </shape>
